[vmutils] Fixing unit tests for Windows platform.
Signed-off-by: Stéphane Galland <galland@arakhne.org>